Adding Base64 class and gitignore